# OptionPriceAppraiser

./: .gitmodules  CMakeLists.txt
src/model/: Model.cpp  Model.hpp
src/process/: Process.hpp  prosecc.h
src/process/CompositePoissonProcess/: CompositePoissonProcess.cpp  CompositePoissonProcess.h  CompositePoissonProcess.hpp
src/process/WienerProcess/: WienerProcess.cpp  WienerProcess.h  WienerProcess.hpp
